--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 body {
   margin: 0;
   padding: 0;
+  height: 100vh;
+  width: 100vw;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -13,6 +15,11 @@ code {
     monospace;
 }
 
+#root{
+  width: 100%;
+  height: 100%;
+}
+.app,
 .map {
-  height: 500px;
+  height: 100%;
 }
